# textcaret

./: LICENSE  README.md  README.rst  pyproject.toml
tests/: test_textcaret.py
textcaret/: __init__.py  textcaret.py
textcaret/functions/: functions.py
