[tool.poetry]
name = "textcaret"
version = "0.0.1"
description = "Simplified NLP Toolkit for common NLP Tasks"
authors = ["Jesse E.Agbe(JCharis) <jcharistech@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wordcloud = "^1.8.1"
matplotlib = "^3.4.2"
spacy = "^3.1.1"
textblob = "^0.15.3"
neattext = "^0.1.0"
sumy = "^0.8.1"
nltk = "^3.6.2"
textstat = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
