[tool.poetry]
name = "textcaret"
version = "0.0.1"
description = "Simplified NLP Toolkit for unifying common Natural Language Processing Tasks"
authors = ["Jesse E.Agbe(JCharis) <jcharistech@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jcharistech/textcaret"
repository = "https://github.com/jcharistech/textcaret"
keywords = ["textcaret","tidytext","jcharistech", "pycaret", "NLP","text preprocessing","text vizualization","text summarization","sweetviz","pandas","sumy","normalize","textblob"]

classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Operating System :: OS Independent",
    ]


[tool.poetry.dependencies]
python = "^3.8"
wordcloud = "^1.8.1"
matplotlib = "^3.4.2"
spacy = "^3.1.1"
textblob = "^0.15.3"
neattext = "^0.1.0"
sumy = "^0.8.1"
nltk = "^3.6.2"
textstat = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
